src/components/Header/style.css
.header {
	position: fixed;
	left: 0;
	top: 0;
	height: 80px;
	width: 100%;
	padding: 0;
	background: var(--color-primary);
	box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
	z-index: 50;
}

.header .wrapper {
	width: 100%;
	max-width: 1024px;
	margin: 0 auto;
}

.header h1 {
	float: left;
	margin: 0;
	padding: 0 15px;
	font-size: 24px;
	line-height: 80px;
	font-weight: 400;
	color: #FFF;
}

.appBar {
  height: var(--header-height);
  overflow: hidden;
  color: white;
  background-color: var(--color-primary);
}

.appBar img {
  height: var(--header-height);
  /* For come reason the image overflows the header without that correction */

}

.horizontal > [data-react-toolbox="link"],
.horizontal > a {
  color: #DDD;
  opacity: 1;
  margin: 0 10px;
  cursor: pointer;
}

